# base-telegram-mini-app-backand

./: pyproject.toml
app/: config.py  main.py
