[project]
name = "base-telegram-mini-app-backand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "uvicorn>=0.46.0",
]
